--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "deploy": "rsync -av ./* deploy@nilshollmer.me:/home/deploy/git/fcs-ws"
+
   },
   "author": "",
   "license": "ISC",
